<resources>
    <string name="app_name">AutCure</string>
    <string name="button">Button</string>
    <string name="play_games">Play games</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="signup">Signup</string>
    <string name="parent">Parent</string>
    <string name="view_performance">View Performance</string>
    <string name="communication">Communication</string>
    <string name="update_info">Update Info</string>
    <string name="teacher">Teacher</string>
    <string name="assign_tasks">Assign Tasks</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="level">Level</string>
    <string name="date_of_birth">Date of Birth: </string>
    <string name="address">Address</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="qualification">Qualification</string>
    <string name="correct_0">Correct : 0</string>
    <string name="incorrect_0">Incorrect : 0</string>
    <string name="put_the_shapes_at_correct_position">Put the shapes at correct position</string>
    <string name="rectangle">Rectangle</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="put_the_balls_in_the_basket">Put the balls in the basket</string>
    <string name="choose_the_animal">Choose the animal</string>
    <string name="choose_the_fruit">Choose the fruit</string>
    <string name="choose_the_vegetable">Choose the vegetable</string>
    <string name="name">Name:</string>
    <string name="from">From:</string>
    <string name="dial_number">Dial Number</string>
    <string name="send_mail">Send Mail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parents_image">Parents Image</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_teacher_welcome">TeacherWelcomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="update_profile">Update Profile</string>
    <string name="do_you_want_to_play_again">Do you want to play again?</string>
    <string name="game_completed">Game Completed</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="child">Child</string>
    <string name="alert">Alert</string>
    <string name="do_you_want_to_exit_game">Do you want to exit game?</string>
    <string name="associate_children">Associate Children</string>
    <string name="logout">Logout</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="sufyan_latif">Sufyan Latif</string>
    <string name="play_games">Play games</string>
    <string name="view_tasks">View Tasks</string>
    <string name="view_animations">View Animations</string>
    <string name="green_basket">Green Basket</string>
    <string name="red_basket">Red Basket</string>
    <string name="blue_basket">Blue Basket</string>
    <string name="green_ball">Green Ball</string>
    <string name="blue_ball">Blue Ball</string>
    <string name="red_ball">Red Ball</string>
    <string name="square_shape">Square Shape</string>
    <string name="circle_shape">Circle Shape</string>
    <string name="rectangle_shape">Rectangle Shape</string>
    <string name="go_back">Go Back</string>
    <string name="select_a_game">Select a game</string>
    <string name="shapes_icon">Shapes Icon</string>
    <string name="animal_icon">Animal Icon</string>
    <string name="fruit_icon">Fruit Icon</string>
    <string name="vegetable_icon">Vegetable Icon</string>
    <string name="ball_icon">Ball Icon</string>
    <string name="logo">Logo</string>
    <string name="filter_results">Filter Results</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="profile_image">Profile Image</string>
    <string name="autcure_text">AutCure Text</string>
    <string name="edit_prifile_image">Edit Prifile Image</string>
    <string name="save">Save</string>
</resources>
