<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_view_performance"
            android:icon="@drawable/ic_viewperformance"
            android:title="@string/view_performance" />
        <item
            android:id="@+id/nav_communication"
            android:icon="@drawable/ic_telephone"
            android:title="@string/communication" />
        <item
            android:id="@+id/nav_assign_tasks"
            android:icon="@drawable/ic_performtask"
            android:title="@string/assign_tasks" />
        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/update_profile" />
        <item
            android:id="@+id/nav_associate_children"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/associate_children" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>
