<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:padding="10dp"
    tools:context=".fragments.ChildSignupTwoFragment">

    <EditText
        android:id="@+id/editchildlevel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_viewperformance"
        android:hint="@string/level"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/editchilddob"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editchildaddr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_address"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <ProgressBar
            android:id="@+id/childprogressbarsignup"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        />
    <RadioGroup
        android:id="@+id/childgendergroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">
        <RadioButton
            android:id="@+id/childgendermale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/childgenderfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:layout_marginTop="0dp"
            />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnchildup"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/button_style"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnchildcan"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_style"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>