<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="450dp"
    android:padding="10dp"
    tools:context=".fragments.ChildSignupOneFragment">



    <EditText
        android:id="@+id/editchildfirst"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/first_name"
        android:inputType="textCapWords"
        />
    <EditText
        android:id="@+id/editchildlast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        />
    <EditText
        android:id="@+id/editchildusername"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/username"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/editchildpassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/editchconpassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="25dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/childbtnnext"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_style"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/childbtnback1"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:text="@string/back"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>