<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TeacherSignupTwoFragment">

    <EditText
        android:id="@+id/edittecphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttondesign"
        android:drawableStart="@drawable/ic_telephone"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edittecqual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttondesign"
        android:drawableStart="@drawable/ic_quali"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/qualification"
        android:inputType="text"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        >
        <ProgressBar
            android:id="@+id/teacherprogressbarsignup"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/teachergendergroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="10dp">
        <RadioButton
            android:id="@+id/teachergendermale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="25sp"
            />
        <RadioButton
            android:id="@+id/teachergenderfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btntecup"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:background="@drawable/empty"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btntecback2"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:background="@drawable/empty"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>