<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262a2e27"
    android:padding="10dp"
    tools:context=".activities.GameMatchShapeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scoreLayout">

        <TextView
            android:id="@+id/tvCorrectShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_0"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#0327f5"
            />
        <TextView
            android:id="@+id/tvIncorrectShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/incorrect_0"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:textColor="#0327f5"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/tvPutTheShapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/scoreLayout"
        android:text="@string/put_the_shapes_at_correct_position"
        android:textColor="#af3d3d"
        android:textSize="23sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/squareShape"
        android:layout_below="@id/tvPutTheShapes"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/square_shape" />

    <ImageView
        android:id="@+id/circleShape"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:src="@drawable/circle_shape" />

    <ImageView
        android:id="@+id/rectangleShape"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:src="@drawable/square_shape" />

    <TextView
        android:id="@+id/tvRectangle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_below="@id/tvPutTheShapes"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/rectangle"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/tvCircle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:text="@string/circle"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/tvSquare"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/square"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

</RelativeLayout>