<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000"
    android:padding="@dimen/padding_main_alert_dialog"
    >

    <TextView
        android:id="@+id/tvGameCompletedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_alert_dialog"
        android:text="@string/game_completed"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/tvPlayAgainLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGameCompletedLabel"
        android:text="@string/do_you_want_to_play_again"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/subtitle_alert_dialog"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tvPlayAgainLabel"
        android:layout_marginBottom="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:background="#FF9800"
            android:textSize="@dimen/btn_text_alert_dialog"
            android:padding="5dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:background="#FF9800"
            android:padding="5dp"
            android:textSize="@dimen/btn_text_alert_dialog"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>